# Malsight

./: .gitignore  Dockerfile  README.md  agent.py  docker-compose.yml  pyproject.toml  req.txt  tool_executor.py
api/: __init__.py  db.py  gmail_routes.py  mail_routes.py  main.py  routes.py  worker.py
demo/: run_demo_cache.py
docs/: IMPLEMENTATION_EMAIL_GATEWAY.md  MalSight_PRD_v2_1.md  SETUP.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: MitreTag.jsx  ReasoningChain.jsx  VerdictBadge.jsx
frontend/src/data/: demoData.js
frontend/src/pages/: AgentMonitor.jsx  AttachmentReport.jsx  ConnectGmail.jsx  EmailDetail.jsx  History.jsx  Inbox.jsx  Quarantine.jsx  Report.jsx  Upload.jsx
frontend/src/tests/: AgentMonitor.test.jsx  (+3 more)
gmail_connector/: Dockerfile  db.py  oauth.py  processor.py  renewal.py  requirements.txt
mail_processor/: Dockerfile  __init__.py  db.py  mail_processor.py  requirements.txt
malsight/: config.py
migrations/: 01_base_schema.sql  02_email_gateway.sql  03_gmail_accounts.sql
scripts/: send_test_email.py  start_worker.py
smtp_server/: Dockerfile  db.py  requirements.txt  smtp_server.py
tests/: __init__.py  test_agent.py  test_anti_analysis.py  test_api.py  test_config.py  test_ioc.py  test_memory.py  test_sandbox.py  test_static_analysis.py  test_threat_intel.py
tmp/: eicar.com
tools/: __init__.py  anti_analysis.py  ioc.py  memory.py  sandbox.py  static_analysis.py  threat_intel.py
(+20 files in other folders)
